[project]
name = "repl-nix-newswave"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "werkzeug>=3.0.6",
    "sqlalchemy>=2.0.36",
    "flask-caching>=2.3.0",
    "flask-wtf>=1.2.2",
    "scikit-learn>=1.5.2",
    "plotly>=5.24.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "flask-apscheduler>=1.13.1",
]
